<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Advanced settings</string>

    <string name="defaults_button">Reset to default</string>
    <string name="kernel_does_not_support">Kernel does not support</string>

    <!-- Screen Preference -->
    <string name="category_screen_title">Screen</string>
    <string name="screen_colors_title">Colors</string>

    <!-- Content adaptive backlight control -->
    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>

    <!-- mDNIe -->
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>

    <!-- LED -->
    <string name="led_subcat_title">Notification LED</string>
    <string name="led_fade_title_head">LED Fading</string>
    <string name="led_fade_summary_head">Enable LED smooth fading instead of sharp blinking.</string>

    <!-- Touchkey tuning -->
    <string name="touchkey_subcat_title">Touchkeys</string>
    <string name="touchkey_light_title_head">Backlight</string>
    <string name="touchkey_light_summary_off">Enable backlight</string>
    <string name="touchkey_light_summary_on">Disable backlight</string>
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Set timeout for the backlight</string>

    <!-- Haptic Preference -->
    <string name="category_haptic_title">Haptic</string>

    <!-- VibratorTuning -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>

    <!-- Radio Preference -->
    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <!-- Audio Preference -->
    <string name="category_audio_title">Audio</string>
    <string name="dockaudio_subcat_title">Dock audio</string>
    <string name="use_dock_audio_title_head">Use USB Dock Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>

    <!-- S-Pen -->
    <string name="spen_subcat_title">S-Pen</string>
    <string name="spen_power_save_title_head">Power saving mode</string>
    <string name="spen_power_save_summary_head">Disable stylus digitizer when S-Pen is in device</string>

    <!-- Touchwake -->
    <string name="touchwake_title">Touchwake</string>
    <string name="touchwake_enable_title">Enable</string>
    <string name="touchwake_enable_summary">Wake up device on screen touch</string>
    <string name="touchwake_timeout_title">Timeout</string>
    <string name="touchwake_timeout_summary">Set timeout for touchwake</string>
    <string name="touchwake_doubletap_title">Double tap to wake</string>
    <string name="touchwake_doubletap_summary_off">Set touchwake timeout to 0</string>
    <string name="touchwake_doubletap_summary_on">Set double tap speed</string>

</resources>
